bad/assign_binop_or_class.example_compiler_output
ERROR
[1mbad/assign_binop_or_class.lat:8:9: [1;31merror: [0;1mleft side is not assignable[m
	x || y = new Y;
	       [1;32m^[m
[1mbad/assign_binop_or_class.lat:8:2: [1;34mnote: [0;1mleft side starts here[m
	x || y = new Y;
	[1;32m^[m
